--- a/FileRenamer/FileRenamer/packages.config
+++ b/FileRenamer/FileRenamer/packages.config
@@ -4,6 +4,9 @@
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="itext7" version="7.1.13" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="Ninject" version="3.3.4" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
+  <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
+  <package id="Prism.Wpf" version="8.0.0.1909" targetFramework="net472" />
 </packages>
