--- a/FileRenamer/FileRenamer/packages.config
+++ b/FileRenamer/FileRenamer/packages.config
@@ -9,4 +9,6 @@
   <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
   <package id="Prism.Wpf" version="8.0.0.1909" targetFramework="net472" />
+  <package id="Windows7APICodePack-Core" version="1.1.0.0" targetFramework="net472" />
+  <package id="Windows7APICodePack-Shell" version="1.1.0.0" targetFramework="net472" />
 </packages>
